refactor: Deprecated clazz.newInstance() usages are fixed.